добавил документацию и кеширование, todo: настроить compose
