# internal/models/task.go
@@ -2,46 +2,33 @@ package models
 
 import "time"
 
-// Task represents a task entity.
-// swagger:model
+// Task represents a task in the system.
+// @Summary Task details
+// @Description Task details with ID, title, description, creation time, management time, and associated user ID.
+// @ID Task
+// @Produce json
+// @Param id path int true "Task ID"
+// @Param title body string true "Task title"
+// @Param description body string true "Task description"
+// @Param created_at body string true "Task creation time in RFC3339 format"
+// @Param scheduled_for body string true "Task management time in RFC3339 format"
+// @Param user_id body int true "User ID associated with the task"
 type Task struct {
-	// ID of the task.
-    // required: true
-    // example: 1
-	ID          int       `db:"id" json:"id"`
-
-	// Title of the task.
-    // required: true
-    // example: Task Title
-	Title       string    `db:"title" json:"title"`
-
-	// Description of the task.
-    // example: Task Description
-	Description string    `db:"description" json:"description"`
-
-	// CreatedAt represents the timestamp when the task was created.
-    // required: true
-    // example: "2023-11-08T12:00:00Z"
-	CreatedAt   time.Time `db:"created_at" json:"created_at"`
-
-	// ManagedAt represents the timestamp when the task was last managed.
-    // required: true
-    // example: "2023-11-08T12:30:00Z"
-	ManagedAt   time.Time `db:"managed_at" json:"managed_at"`
-
-	// UserID represents the ID of the user to whom the task belongs.
-    // required: true
-    // example: 1
-	UserID      int       `db:"user_id" json:"user_id"`
+	ID           int       `db:"id" json:"id"`
+	Title        string    `db:"title" json:"title"`
+	Description  string    `db:"description" json:"description"`
+	CreatedAt    time.Time `db:"created_at" json:"created_at"`
+	ScheduledFor time.Time `db:"scheduled_for" json:"scheduled_for"`
+	UserID       int       `db:"user_id" json:"user_id"`
 }
 
-func NewTask(id int, title, description string, createdAt, managedAt time.Time, userId int, done bool) Task {
+func NewTask(id int, title, description string, createdAt, scheduledFor time.Time, userId int, done bool) Task {
 	return Task{
-		ID:   id,
-		Title: title,
-		Description: description,
-		CreatedAt: createdAt,
-		ManagedAt: managedAt,
-		UserID: userId,
+		ID:           id,
+		Title:        title,
+		Description:  description,
+		CreatedAt:    createdAt,
+		ScheduledFor: scheduledFor,
+		UserID:       userId,
 	}
 }
